<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    tools:context=".history.HistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_script_light"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bnHome"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/bnHome"
            android:layout_width="@dimen/buttonToolbar"
            android:layout_height="@dimen/buttonToolbar"
            android:layout_marginStart="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:padding="@dimen/paddingButton"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/bnDelete"
            android:layout_width="@dimen/buttonToolbar"
            android:layout_height="@dimen/buttonToolbar"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:padding="@dimen/paddingButton"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toStartOf="@+id/tvAll"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/tvAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/all"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toStartOf="@+id/chSelectAll"
            app:layout_constraintTop_toTopOf="@+id/tvTitle" />

        <CheckBox
            android:id="@+id/chSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ckSelectAll"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clToolBar"
        tools:listitem="@layout/item_history"
        tools:itemCount="5"/>


</androidx.constraintlayout.widget.ConstraintLayout>